<resources>
    <string name="app_name">CashTime</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_tabbed_goals">Goals</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="group_saving_fragment">Group Saving Fragment</string>
    <string name="title_activity_tabbed_saving">Savings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tabbed_transactions">TabbedTransactionsActivity</string>
    <string name="title_activity_tabbed_analysis">TabbedAnalysisActivity</string>
    <string name="add_amount">Add Amount</string>
    <string name="add_goal">Add Goal</string>
    <string name="goal_deadline">Goal Deadline</string>
    <string name="etwin_himself">etwin himself</string>
    <string name="add_goal_name">Add Goal Name</string>
    <string name="add_goal_amount">Add Goal Amount</string>
    <string name="barriers">Barriers</string>
    <string name="tips">Tips</string>
    <string name="tip_notes">Tip Notes</string>
    <string name="tip_title">Enter Tip Title</string>
    <string name="delete">Delete</string>
    <string name="update_btn">Update</string>
    <string name="tip_cancel">Cancel</string>
    <string name="tip_save">Save</string>
    <string name="tip_goal_name">Goal Name</string>
    <string name="barrier_name">Barrier Name</string>
    <string name="barrier_notes">Barrier Notes</string>
    <string name="barrier_notes_detail">This is a tip about this goal...hope this tip really helps and remember this goal is ...</string>
    <string name="delete_barrier">Delete</string>
    <string name="update_barrier">Update</string>
    <string name="save_barrier">Save</string>
    <string name="cancel_barrier">Cancel</string>
    <string name="title_activity_tabbed_expenditure">Expenditure</string>
    <string name="title_activity_tabbed_income">Income</string>
    <string name="terms_of_service">I agree to the Terms of Service and Privacy Policy</string>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="oxfam_server_url">http://oxfamdataservice.org/parse/</string>

    <string name="back4app_app_id">BGFV6AVElkUkTufl1iL9mSonZgtEMjHLnSY8xB2J</string>
    <string name="oxfam_app_id">462s45ze2vn6x2vrfyfenqmksngx5xbs</string>
    <string name="back4app_client_key">eYEH5MBEUFuYhrW1qiU1CaQHqwXKZMNixjRpSWZr</string>
    <string name="add_group_msg">No Groups Added. Click + button to add a Group</string>
    <string name="add_member_goal_saving_msg">No Member Goals Added.</string>
    <string name="add_group_goal_msg">No Group Goals Added. Click + button to add a Goal</string>
    <string name="no_member_saving_msg">No Member Savings Added. Click + button to add a Saving</string>
    <string name="add_member_goal_msg">No Member Goals Added. Click + button to add a Goal</string>
    <string name="add_group_goal_saving_msg">No Group Goals Added.</string>
    <string name="barrier_to_group_goal_msg">No Group Failed Goals Yet. You can only add a barrier for a failed goal</string>
    <string name="add_member_msg">No Group Members Added. Click + button to add a Group Member</string>
    <string name="no_members_msg">No Group Members Added.</string>
    <string name="no_group_barriers_msg">No Group Barriers Added. Click + button to add a Barrier</string>
    <string name="no_group_savings_msg">No Group Savings Added. Click + button to add a Saving</string>
    <string name="no_tips_msg">No Tips Added. Click + button to add a Tip</string>

    <string name="add_member_income_msg">No Income Added. Click + button to add an Income</string>
    <string name="add_member_expenditure_msg">No Expenditure Added. Click + button to add an Expenditure</string>
    <string name="add_group_income_msg">No Income Added. Click + button to add an Income</string>
    <string name="add_group_expenditure_msg">No Expenditure Added. Click + button to add an Expenditure</string>

    <string name="username">Usernames</string>
    <string name="enter_phone_number">Enter Phone Number e.g 07xxxxxxxx</string>
    <string name="family_size_e_g_3">Enter Family Size e.g 3</string>
    <string name="occupation_e_g_coffee_farmer">Enter Occupation e.g Coffee farmer</string>
    <string name="select_gender">Select Gender</string>
    <string name="select_level_of_education">Select Level Of Education</string>
    <string name="select_country_of_birth">Select Country Of Birth</string>
    <string name="where_does_member_live">Where does Member live?</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_privacy_policy">Privacy Policy</string>
    <string name="title_activity_version">Version</string>
    <string name="title_activity_license">License</string>
    <string name="title_activity_terms_of_service">Terms of Service</string>
    <string name="submit">Submit</string>
    <string name="new_group">Creating a new group</string>
    <string name="add_member">Adding member to group</string>
    <string name="group_savings">"
        Click Savings on home page \n
        Click green plus (+) on button right corner  \n
        Select a group whose savings you want to add  \n
        fill in the form then click save to submit the saving"</string>
    <string name="member_savings">"
        Click Savings from home page \n
        Click green plus (+) on button right corner \n
        Select a group member whose savings you want to add \n
        Fill in the form then click save to submit the saving"</string>
    <string name="group_income">"
        Select Income from home page \n
        Click green plus (+) on button right corner  \n
        Select group whose income is to be added \n
        Fill in the form and click save"</string>
    <string name="members_income">"
        Select income from home page \n
        Swipe to member’s income \n
        Click green plus (+) on button right corner  \n
        Select group member whose income is to be added \n
        Fill in the form and click save"</string>
    <string name="group_expenditure">"
        Select expenditure from home page \n
        Click green plus (+) on button right corner  \n
        Select group whose income is to be added \n
        Fill in the form and click save"</string>
    <string name="members_expenditure">"
        Select expenditure from home page \n
        Swipe to member’s expenditure \n
        Click green plus (+) on button right corner \n
        Select group member  \n
        Fill in the form and click save"</string>
    <string name="group_analytics">"
        Select analytics from the home page \n
        Select group whose analytics you want to view"</string>
    <string name="members_analytics">"
        Select analytics from the home page \n
        Swipe to Members Analytics \n
        Select group member to view analytics"</string>
    <string name="add_new_group">"
        Select Groups from drawer menu \n
        Click green plus (+) on button right corner  \n
        Fill in the form and click save"</string>
    <string name="add_member_to_group">"
        Select Groups from drawer menu \n
        Select group to add member \n
        Click green plus (+) on button right corner  \n
        Fill in the form \n
        Click Submit to add member to group"</string>
    <string name="group_goals">"
        Click Goals on home  \n
        Click green plus (+) on button right corner \n
        Select group whose goal you want to create \n
        Add goal name, amount, deadline, some notes \n
        Click Save button to create a goal"</string>
    <string name="member_goals">"
        Click Goals on home \n
        Swipe to Members Goals \n
        Click green plus (+) on button right corner  \n
        Select group member \n
        Fill in the form with goal amount, deadline and some notes
        And click save to create a goal"</string>

    <!--level of education array-->
    <string-array name="level_of_education">
        <item>Primary</item>
        <item>Secondary</item>
        <item>University</item>
    </string-array>


</resources>

