<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.eq62roket.cashtime.Activities.AddTipsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:titleTextColor="#fff"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <ScrollView
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/goal"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="5dp"/>

                <EditText
                    android:id="@+id/goalName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tip_goal_name"
                    android:layout_margin="5dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/goal"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="5dp"/>

                <EditText
                    android:id="@+id/barrierName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/barrier_name"
                    android:layout_margin="5dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/notes"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="5dp"/>

                <EditText
                    android:id="@+id/barrierNotes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/barrier_notes"
                    android:layout_margin="5dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/barrierDeleteBtn"
                        android:layout_width="170dp"
                        android:layout_height="60dp"
                        android:layout_marginRight="1dp"
                        android:textColor="#fff"
                        android:background="@color/red"
                        android:text="@string/delete"
                        android:backgroundTint="@color/red"/>

                    <Button
                        android:id="@+id/barrierUpdateBtn"
                        android:layout_width="170dp"
                        android:layout_marginLeft="1dp"
                        android:layout_height="60dp"
                        android:textColor="#fff"
                        android:background="@color/green"
                        android:textAlignment="center"
                        android:text="@string/update_barrier"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
