<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.eq62roket.cashtime.Activities.AddMembersGoalsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/person"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="5dp"/>

                <TextView
                    android:id="@+id/memberName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/etwin_himself"
                    android:textSize="16sp"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="15dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/goal"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="5dp"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/memberGoalName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_goal_name"
                        android:layout_margin="5dp"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/money"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="5dp"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/memberGoalAmount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_goal_amount"
                        android:inputType="number"
                        android:layout_margin="5dp"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/calendar"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="5dp"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/memberGoalDueDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/goal_deadline"
                        android:focusable="false"
                        android:layout_marginLeft="5dp"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/notes"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="5dp"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/memberGoalNotes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Notes (Optional)"
                        android:layout_margin="5dp"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/memberGoalDeleteBtn"
                    android:layout_width="170dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="1dp"
                    android:textColor="#fff"
                    android:background="@color/red"
                    android:text="@string/delete"
                    android:backgroundTint="@color/red"/>

                <Button
                    android:id="@+id/memberGoalUpdateBtn"
                    android:layout_width="170dp"
                    android:layout_marginLeft="1dp"
                    android:layout_height="60dp"
                    android:text="Update"
                    android:textColor="#fff"
                    android:background="@color/green"
                    android:textAlignment="center"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</ScrollView>
